tests/baselines/reference/parserGreaterThanTokenAmbiguity20.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity20.ts (1 errors) ====
    1
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    // Before
    >>>= // after
    2;